# Chrysalis

./: .editorconfig  .gitignore  CBOR.md  CLAUDE.md  CONTRIBUTING.md  Chrysalis.sln  Chrysalis.slnx  ChrysalisCborTypes.png:Zone.Identifier  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  NEW_README.md  README.md  ScriptRef.txt  TX.MD  message.txt  refresh-codegen.sh  sad.json
.github/workflows/: ci.yml  dotnet.yml  release.yml
BenchmarkDotNet.Artifacts/results/: DeserializationBenchmarks-report-github.md  DeserializationBenchmarks-report.csv  DeserializationBenchmarks-report.html  FieldAccessBenchmarks-report-github.md  FieldAccessBenchmarks-report.csv  FieldAccessBenchmarks-report.html  RoundTripBenchmarks-report-github.md  RoundTripBenchmarks-report.csv  RoundTripBenchmarks-report.html
benchmarks/: BENCHMARKS.md  CHAINSYNC_PERF_MATRIX.md  CODEGEN.md  Directory.Build.props  bench.sh  chainsync.sh  run.sh
benchmarks/ChainSyncBench/: ChainSyncBench.csproj  Program.cs
benchmarks/ChainSyncBenchOld/: ChainSyncBenchOld.csproj  Program.cs
benchmarks/ChrysalisNew/: ChrysalisNew.csproj  Program.cs
benchmarks/ChrysalisOld/: ChrysalisOld.csproj  Program.cs
benchmarks/GouroborosChainSyncBench/: .gitignore  go.mod  go.sum  main.go
docs/: BENCHMARKS.md  CBOR.md  CONTRIBUTING.md  PLAN.md  TX.md  UPLC.md  architecture-overview.md  network-implementation-analysis.md  ouroboros-network-analysis.md
src/Chrysalis.Plutus/Dependencies/plutus-vm-dotnet-rs/: Cargo.toml
src/Chrysalis.Plutus/Dependencies/plutus-vm-dotnet-rs/src/: lib.rs
(+1884 files in other folders)
