[package]
name = "plutus-vm-dotnet-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
hex = "0.4"
chrono = "0.4.39"

pallas = "0.32.0"
# pallas = { git = "https://github.com/txpipe/pallas.git", features = ["phase-two"] }
# pallas = { path = "../../../../../pallas/pallas"}

uplc = "1.1.15"
# uplc = {path = "../../../../../aiken/crates/uplc"}
